# http-ocr

./: .gitignore  CMakeLists.txt  README.md  build
components/: CMakeLists.txt
components/http/client/: CMakeLists.txt  async_client.cpp
components/http/server/ptest/: CMakeLists.txt
components/http/server/src/: CMakeLists.txt  connection.hpp  io_service_pool.cpp  io_service_pool.hpp  main.cpp  mime_types.cpp  mime_types.hpp  multipart_parser.c  reply.cpp  reply.hpp  request.cpp  request.hpp  server.cpp  server.hpp  tesseract.cpp  tesseract.h  utils.cpp  utils.h  websocket.cpp  websocket.h
